@@ -13,7 +13,7 @@
 # Copyright (c) 2000 by Ajuba Solutions
 # All rights reserved.
 # 
-# RCS: @(#) $Id: tcltest.tcl,v 1.33 2001/09/06 17:51:00 vincentdarley Exp $
+# RCS: @(#) $Id: tcltest.tcl,v 1.34 2002/03/11 21:00:16 mdejong Exp $
 
 # create the "tcltest" namespace for all testing variables and procedures
 
@@ -2806,8 +2806,9 @@ proc tcltest::getMatchingFiles { {searchDirectory ""} } {
     set matchingFiles {}
 
     # Find the matching files in the list of directories and then remove the
-    # ones that match the skip pattern
-    foreach directory $searchDirectory {
+    # ones that match the skip pattern. Passing a list to foreach is required
+    # so that a patch like D:\Foo\Bar does not get munged into D:FooBar.
+    foreach directory [list $searchDirectory] {
 	set matchFileList {}
 	foreach match $tcltest::matchFiles {
 	    set matchFileList [concat $matchFileList \
